--- a/android/api/io/scanbot/sdk/ui_v2/document/components/camera/MockLayoutAnimation.html
+++ b/android/api/io/scanbot/sdk/ui_v2/document/components/camera/MockLayoutAnimation.html
@@ -165,6 +165,18 @@ public final class <span class="typeNameLabel"><a href=MockLayoutAnimation.html>
                                             <th class="colLast" scope="col">Description</th>
                                         </tr>
                                         
+                                        <tr class="altColor">
+                                            <td class="colFirst"><code>private final &lt;Error class: unknown class&gt;&lt;<a href=../../screen/camera/PreviewBitmap.html>PreviewBitmap</a>&gt;</code></td>
+                                            <th class="colSecond" scope="row"><code><a href=MockLayoutAnimation.html#preview>preview</a></code></th>
+                                            <td class="colLast"></td>
+                                        </tr>
+                                        
+                                        <tr class="rowColor">
+                                            <td class="colFirst"><code>private final Function0&lt;<a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a>&gt;</code></td>
+                                            <th class="colSecond" scope="row"><code><a href=MockLayoutAnimation.html#onPreviewEnded>onPreviewEnded</a></code></th>
+                                            <td class="colLast"></td>
+                                        </tr>
+                                        
                                     </table>
                                 </div>
                             </li>
@@ -191,7 +203,7 @@ public final class <span class="typeNameLabel"><a href=MockLayoutAnimation.html>
                                         
                                             <tr class="altColor">
                                                 <th class="colConstructorName" scope="row"><code><span class="memberNameLink"><a
-                                                        href="#MockLayoutAnimation()">MockLayoutAnimation</a></span>()</code></th>
+                                                        href="#MockLayoutAnimation(.&lt;Error class: unknown class&gt;,kotlin.jvm.functions.Function0)">MockLayoutAnimation</a></span>(&lt;Error class: unknown class&gt;&lt;<a href=../../screen/camera/PreviewBitmap.html>PreviewBitmap</a>&gt; preview, Function0&lt;<a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a>&gt; onPreviewEnded)</code></th>
                                                 <td class="colLast"></td>
                                             </tr>
                                         
@@ -245,6 +257,30 @@ public final class <span class="typeNameLabel"><a href=MockLayoutAnimation.html>
                                         </tr>
                                         
                                         <tr id="i0" class="altColor">
+                                            <td class="colFirst"><code>final &lt;Error class: unknown class&gt;&lt;<a href=../../screen/camera/PreviewBitmap.html>PreviewBitmap</a>&gt;</code>
+                                            </td>
+                                            <th class="colSecond" scope="row"><code><a href=MockLayoutAnimation.html#getPreview()>getPreview</a>() </code>
+                                            </th>
+                                            <td class="colLast"></td>
+                                        </tr>
+                                        
+                                        <tr id="i1" class="rowColor">
+                                            <td class="colFirst"><code>final Function0&lt;<a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a>&gt;</code>
+                                            </td>
+                                            <th class="colSecond" scope="row"><code><a href=MockLayoutAnimation.html#getOnPreviewEnded()>getOnPreviewEnded</a>() </code>
+                                            </th>
+                                            <td class="colLast"></td>
+                                        </tr>
+                                        
+                                        <tr id="i2" class="altColor">
+                                            <td class="colFirst"><code><a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a></code>
+                                            </td>
+                                            <th class="colSecond" scope="row"><code><a href=MockLayoutAnimation.html#Init()>Init</a>() </code>
+                                            </th>
+                                            <td class="colLast"></td>
+                                        </tr>
+                                        
+                                        <tr id="i3" class="rowColor">
                                             <td class="colFirst"><code><a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a></code>
                                             </td>
                                             <th class="colSecond" scope="row"><code><a href=MockLayoutAnimation.html#PreviewOverlay()>PreviewOverlay</a>() </code>
@@ -283,11 +319,11 @@ public final class <span class="typeNameLabel"><a href=MockLayoutAnimation.html>
                             </a>
                                 <h3>Constructor Detail</h3>
                                 
-                                <a name="MockLayoutAnimation()"></a>
+                                <a name="MockLayoutAnimation(.&lt;Error class: unknown class&gt;,kotlin.jvm.functions.Function0)"></a>
                                 <ul class="blockList">
                                     <li class="blockList">
                                         <h4>MockLayoutAnimation</h4>
-                                        <pre>MockLayoutAnimation()</pre>
+                                        <pre>MockLayoutAnimation(&lt;Error class: unknown class&gt;&lt;<a href=../../screen/camera/PreviewBitmap.html>PreviewBitmap</a>&gt; preview, Function0&lt;<a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a>&gt; onPreviewEnded)</pre>
                                         <div class="block"></div>
                                         
                                     </li>
@@ -305,6 +341,51 @@ public final class <span class="typeNameLabel"><a href=MockLayoutAnimation.html>
                                 <!--   -->
                             </a>
                                 <h3>Method Detail</h3>
+                                
+                                <a id="getPreview()">
+                                    <!--   -->
+                                </a>
+                                <ul class=
+                                              "blockList"
+                                          >
+                                    <li class="blockList">
+                                        <h4>getPreview</h4>
+                                        <pre class="methodSignature"> final &lt;Error class: unknown class&gt;&lt;<a href=../../screen/camera/PreviewBitmap.html>PreviewBitmap</a>&gt; <a href=MockLayoutAnimation.html#getPreview()>getPreview</a>()</pre>
+                                        <div class="block"></div>
+                                        
+                                        <!-- TODO missing return annotation -->
+                                    </li>
+                                </ul>
+                                
+                                <a id="getOnPreviewEnded()">
+                                    <!--   -->
+                                </a>
+                                <ul class=
+                                              "blockList"
+                                          >
+                                    <li class="blockList">
+                                        <h4>getOnPreviewEnded</h4>
+                                        <pre class="methodSignature"> final Function0&lt;<a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a>&gt; <a href=MockLayoutAnimation.html#getOnPreviewEnded()>getOnPreviewEnded</a>()</pre>
+                                        <div class="block"></div>
+                                        
+                                        <!-- TODO missing return annotation -->
+                                    </li>
+                                </ul>
+                                
+                                <a id="Init()">
+                                    <!--   -->
+                                </a>
+                                <ul class=
+                                              "blockList"
+                                          >
+                                    <li class="blockList">
+                                        <h4>Init</h4>
+                                        <pre class="methodSignature"> <a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a> <a href=MockLayoutAnimation.html#Init()>Init</a>()</pre>
+                                        <div class="block"></div>
+                                        
+                                        <!-- TODO missing return annotation -->
+                                    </li>
+                                </ul>
                                 
                                 <a id="PreviewOverlay()">
                                     <!--   -->
